# repeatrs_oss

./: .gitignore  Cargo.toml  NOTES.md  README.md  docker-compose.yml  rustfmt.toml
config/: nats.toml  scheduler.toml
crates/repeatrs-auditor/: Cargo.toml
crates/repeatrs-auditor/src/: error.rs  lib.rs  main.rs
crates/repeatrs-auditor/src/api/services/: job.rs  mod.rs  worker.rs
crates/repeatrs-bundles/: Cargo.toml
crates/repeatrs-bundles/src/: lib.rs
crates/repeatrs-cli/: Cargo.toml  README.md
crates/repeatrs-cli/src/: config.rs  error.rs  lib.rs  main.rs
crates/repeatrs-cli/src/commands/: mod.rs
crates/repeatrs-cli/src/commands/job/: add.rs  deactivate.rs  delete.rs  mod.rs
crates/repeatrs-cli/src/commands/queue/: mod.rs
crates/repeatrs-db/: Cargo.toml
crates/repeatrs-db/src/: error.rs  lib.rs
crates/repeatrs-db/src/job_queues/: mod.rs  queries.rs
crates/repeatrs-db/src/job_runs/: mod.rs  queries.rs
crates/repeatrs-db/src/job_schedule_state/: mod.rs  queries.rs
crates/repeatrs-db/src/job_schedules/: mod.rs  queries.rs
crates/repeatrs-db/src/jobs/: mod.rs  queries.rs
crates/repeatrs-db/src/queues/: mod.rs  queries.rs
crates/repeatrs-db/src/workers/: failover.rs  mod.rs  queries.rs
crates/repeatrs-domain/: Cargo.toml  README.md
crates/repeatrs-domain/src/: error.rs  job.rs  job_queue.rs  job_runs.rs  job_schedule_state.rs  lib.rs  queue.rs  worker.rs
crates/repeatrs-main/: Cargo.toml
crates/repeatrs-main/src/: error.rs  main.rs
crates/repeatrs-nats/: Cargo.toml
crates/repeatrs-nats/src/: config.rs  error.rs  lib.rs  nats.rs
crates/repeatrs-proto/: Cargo.toml  README.md  build.rs
crates/repeatrs-proto/proto/: repeatrs.proto
crates/repeatrs-proto/src/: lib.rs
crates/repeatrs-scheduler/: Cargo.toml  README.md
crates/repeatrs-scheduler/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  reconciler.rs  scheduler.rs  state.rs  utils.rs
crates/repeatrs-scheduler/src/controllers/: job.rs  mod.rs  queue.rs  worker.rs
crates/repeatrs-scheduler/src/services/: job.rs  mod.rs  queue.rs  scheduling.rs  worker.rs
crates/repeatrs-transaction/: Cargo.toml
crates/repeatrs-transaction/src/: lib.rs
crates/repeatrs-worker/: Cargo.toml  README.md
crates/repeatrs-worker/src/: lib.rs  worker.rs
migrations/: 20251230093524_init_schema.sql
