[workspace.package]
name = "repeatrs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
repeatrs-scheduler = { path = "crates/repeatrs-scheduler" }
repeatrs-db = { path = "crates/repeatrs-db" }
repeatrs-cli = { path = "crates/repeatrs-cli" }
repeatrs-proto = { path = "crates/repeatrs-proto" }
# repeatrs-auditor = { path = "crates/repeatrs-auditor" }
repeatrs-domain = { path = "crates/repeatrs-domain" }
repeatrs-main = { path = "crates/repeatrs-main" }
repeatrs-nats = { path = "crates/repeatrs-nats" }
repeatrs-transaction = { path = "crates/repeatrs-transaction" }
repeatrs-bundles = { path = "crates/repeatrs-bundles" }
prost-types = { version = "0.14.3", features = ["chrono"] }
croner = "3.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1", features = [
    "fs",
    "net",
    "io-util",
    "macros",
    "process",
    "sync",
    "time",
    "signal",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = "0.1.18"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
once_cell = "1.21.3"
users = "0.11.0"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
notify = "8.2.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
serde_json = "1.0.148"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v7", "v4", "serde"] }
regex = "1.12.2"
futures = "0.3.31"
async-trait = "0.1.89"
tonic = "0.14.3"
config = "0.15.19"
thiserror = "2.0.18"
async-nats = "0.46.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
