[package]
name = "repeatrs-auditor"
version.workspace = true
edition.workspace = true

[dependencies]
repeatrs-db = { path = "../repeatrs-db" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
croner.workspace = true
serde_json.workspace = true
config.workspace = true
async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tonic = "0.14.3"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
