[package]
name = "repeatrs-proto"
build = "build.rs"
version.workspace = true
edition.workspace = true

[dependencies]
prost = { version = "0.14.3" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tonic.workspace = true
prost-types.workspace = true
tonic-prost = { version = "0.14.3" }
serde_with = "3.16.1"

[build-dependencies]
tonic-prost-build = "0.14.3"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
rustflags = ["-C", "target-feature=+crt-static"]
